# SelfYolo

./: .gitattributes  .gitignore  README.md  debug.py  detect.py  eval.py  pyproject.toml  test.py  train.py
Match/v1/: loss.py  matcher.py
Match/v2/: loss.py  matcher.py
Net/: absnet.py
Net/v1/: backbone.py  head.py  neck.py  readme.md  yolo.py  yolov1.py
Net/v2/: backbone.py  head.py  neck.py  readme.md  yolo.py
Net/v3/: backbone.py  basic.py  fpn.py  head.py  neck.py  yolo.py
building/: build_train.py
config/v1/: __init__.py  v1.yaml
config/v2/: __init__.py  v2.yaml
config/v3/: __init__.py  v3.yaml
tools/: NMS.py  compute_flops.py  get_device.py  kmean_anchors.py  letterbox.py  optim.py
utils/: dataset.py  transforms.py
